# rzem-ai-term

./: .gitignore  README.md  install.sh  pyproject.toml
src/rzem_ai_term/: __init__.py  app.py  daemon.py  shell.py  terminal.py
systemd/: rzem-ai-term@.service
